@@ -2,6 +2,7 @@ What's New for PSPRadio
 ========================
 0.38-Pre3
 NEW FEATURES
+(sandberg) 3DUI: Messages from the PSPRadio (e.g. when downloading the list from shoutcast.com) are now shown in a seperate panel. (r746)
 
 BUG FIXES
 (sandberg) Core/3DUI: Rearranged the order of the VBlank operations to remove some of the jitter on the UI. (r745)
